--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza Recipe</a>
+    <img src="./images/chef-hat.png" alt="" />
+    <ul>
+      <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+      <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+      <li><a href="./recipes/chicken.html">Chicken Recipe</a></li>
+    </ul>
   </body>
 </html>
