--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Odin Recipes</title>
   </head>
-  <body>
-    <h1>Odin Recipes</h1>
-    <img src="./images/chef-hat.png" alt="" />
-    <ul>
-      <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-      <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-      <li><a href="./recipes/chicken.html">Chicken Recipe</a></li>
-    </ul>
+  <body class="main-body">
+    <h1 class="main-title">Odin Recipes</h1>
+    <img src="./images/chef-hat.png" alt="" class="main-image" />
+    <div class="list-container">
+      <ul class="recipes-list">
+        <li class="recipe-item">
+          <a href="./recipes/pizza.html" class="recipe-anchor">Pizza Recipe</a>
+        </li>
+        <li class="recipe-item">
+          <a href="./recipes/lasagna.html" class="recipe-anchor"
+            >Lasagna Recipe</a
+          >
+        </li>
+        <li class="recipe-item">
+          <a href="./recipes/chicken.html" class="recipe-anchor"
+            >Chicken Recipe</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
